[build-system]
requires = [
    "setuptools",
    "swig"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
before-all = "uname -a"
build-verbosity = 3
skip = [
    "cp36-*", "cp37-*", "cp38-*",
    "*i686*", "*ppc64le*", "*pypy*", "*s390x*", "*musllinux*",
    "pp*",
    "*-win32",
]
test-requires = "pytest"
test-command = "pytest {project}/test"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
